hphp/hack/test/typecheck/idx3_5.php.like_types.exp
File "idx3_5.php", line 9, characters 12-12:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 3-25:
Expected ~KeyedContainer<[unresolved], [unresolved]> because it is an unenforceable type
File "idx3_5.php", line 9, characters 12-12:
But got int
